Fix: 추천 보드게임 목록에서 이미 픽한것들 제외